--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -1,11 +1,19 @@
 <html>
+  <% 
+    def link_to(name, url)
+      return "<a href='#{url}'>#{name}</a>"
+    end
+  %>
   <body>
-    <h1>You're using a layout</h1>
+    <h1>Created using a layout</h1>
     <p>
-      <h3> I'm a header</h3>
-      <p>Put things in the header</p>
+      <h3>Example of a header</h3>
+      <p>Things in the header</p>
+      <ul>
+        <%= link_to('This is a link to google', 'http://google.com') %>
+      </ul>
       <a href='me.html'>Me</a>
-
+      <a href='kody.html'>Kody</a>
     </p>
     <hr />
     <div>
@@ -13,8 +21,9 @@
     </div>
     <hr />
     <div>
-      <h3> I'm a footer</h3>
-      <p>Put things in the footer</p>
+      <h3>Wow!, a footer!</h3>
+      <p>foot foot foot foot</p>
+      <%= link_to('Linky linkk to Github', 'http://github.com') %>
     </div>
   </body>
 </html>
