Finished 4th exercise, playing with webrick.

--- a/views/kody.html.erb
+++ b/views/kody.html.erb
@@ -8,5 +8,6 @@
             <li>I think <%= ani %> are awesome!</li>
             <% end %>
         </ul>
+        <p>I also really like science and math!</p>
     </body> 
 </html>
